--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@
 			padding: 0;
 		}
 
+		.nav li a {
+			color: #FFF;
+text-decoration: none;
+		}
 		.content ul {
 			margin: 0 0 32px 0;
 			padding: 0 32px;
