--- a/css/style.css
+++ b/css/style.css
@@ -235,3 +235,28 @@ float:right;
 	text-transform: uppercase;
 				letter-spacing: 1px;
 }
+
+
+
+
+
+
+
+
+.pagination span {
+    background-color: #970044;
+    color: #FFF;
+    padding: 4px 8px;
+    border-radius: 2px;
+    margin: 0 6px;
+        margin-left: 6px;
+}
+
+.pagination span:first-child {
+    margin-left: 0;
+}
+
+.pagination span:hover {
+    color: #FF0;
+    cursor: pointer;
+}
