--- a/css/style.css
+++ b/css/style.css
@@ -1,262 +1,16 @@
-		body {
-			margin: 0;
-			padding: 0;
-		}
-			
-		.nav {
-			
-			max-width: max-content;
-			margin: auto;
-		}
-
-		.nav ul {
-			margin: 0;
-			padding: 0;
-		}
-
-		.nav ul a {
-			color: #FFF;
-			text-decoration: none;
-		}
-		.content ul {
-			margin: 0 0 32px 0;
-			padding: 0 32px;
-			overflow-y: scroll;
-			height: 250px;
-		}
-
-		.nav li {
-			list-style-type: none;
-			background-color: #970044;
-			color: #FFF;
-			border-radius: 2px;
-			margin: 4px 0;
-			padding: 2px;
-			float: left;
-			width: 100%;
-		}
-
-		.nav li, .header h1 {
-			font-family: 'Teko', sans-serif;
-			text-transform: uppercase;
-			letter-spacing: 1px;
-		}
-
-		.header h1 sup {
-			font-size: small;
-		}
-
-		.nav li::before {
-			content: url('../images/bullet.png');
-			margin-right: 5px;
-			position: relative;
-			top: 4px;
-			left: 1px;
-		}
-
-		.nav li:hover {
-
-			color: #FFFF00;
-			cursor: pointer;
-		}
-
-
-		.header-content {
-			width: 100%;
-		}
-
-		.content {
-			max-width: 100%;
-			padding: 0 16px;
-		}
-
-		.wraper {
-			max-width: 768px;
-			margin: 0 auto;
-		}
-
-		.header h1::before {
-			content: url('../images/site-logo.png');
-			vertical-align: -30%;
-		}
-
-		.content ul{
-
-		}
-
-		.content ul li {
-			list-style-image: url('images/dot-18dp.svg');
-
-			margin-bottom: 8px;
-			font-family: BalooDa2-Regular;
-			width: max-content;
-		}
-
-		.content ul li:hover {
-			cursor: pointer;
-		}
-
-		.content ul li:active {
-			background-color: #970044;
-		}
-
-
-
-
-		.content ul li:hover::after {
-			content: '📋';
-			margin-left: 5px;
-			opacity: 0.5;
-		}
-
-/*		.content ul li::before {
-			color: #00d792;
-			content: '●';
-			margin-right: 5px;
-		}*/
-
-		.active {
-			color: yellow!important;
-		}
-
-		@font-face {
-		  font-family: BalooDa2-Regular;
-		  src: url('fonts/BalooDa2-Regular.ttf');
-		}
-
-		@font-face {
-		  font-family: BalooDa2-Medium;
-		  src: url('fonts/BalooDa2-Medium.ttf');
-		}
-
-		.content > span {
-			color: #FF0000;
-			display: inline-block;
-			margin: 0 0 16px 14px;
-					  font-family: BalooDa2-Regular;
-		}
-
-				@keyframes reddot {
-		  from {color: red;}
-		  to {color: white;}
-		}
-
-		.content span::before {
-			color: #FF0000;
-			content: '●';
-			margin-right: 5px;
-			animation-name: reddot;
-		 	animation-duration: 0.5s;
-		 	animation-iteration-count:infinite;
-		 	animation-direction: alternate;
-		}
-
-		.latest-news-text {
-
-		}
-
-
-.fadeInDown {
-  -webkit-animation-name: fadeInDown;
-  animation-name: fadeInDown;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  }
-  @-webkit-keyframes fadeInDown {
-  0% {
-  opacity: 0;
-  -webkit-transform: translate3d(0, -100%, 0);
-  transform: translate3d(0, -100%, 0);
-  }
-  100% {
-  opacity: 1;
-  -webkit-transform: none;
-  transform: none;
-  }
-  }
-  @keyframes fadeInDown {
-  0% {
-  opacity: 0;
-  -webkit-transform: translate3d(0, -100%, 0);
-  transform: translate3d(0, -100%, 0);
-  }
-  100% {
-  opacity: 1;
-  -webkit-transform: none;
-  transform: none;
-  }
-  } 
-
-
-
-.side-bar {
-	width: 20%;
-	float:left;
+.header {
+	width: 100%;
 }
 
-.content-wrap {
-width: 80%;
-float:right;
+.header > h1 {
+	width: max-content;
+	margin: auto;
+}
+.header > h1 sup {
+	font-size: small;
 }
 
-
-[aria-hidden="true"] {
-  opacity: 0;
-  position: absolute;
-  z-index: -9999;
-  pointer-events: none;
-}
-
-
-
-
-
-
-
-::-moz-selection {
-    background-color: transparent;
-    color: #000;
-}
-
-::selection {
-    background-color: transparent;
-    color: #000;
-}
-
-.myclass::-moz-selection,
-.myclass::selection { ... }
-
-
-
-.heading small {
-	font-family: 'Teko', sans-serif;
-	text-transform: uppercase;
-				letter-spacing: 1px;
-}
-
-
-
-
-
-
-
-
-.pagination span {
-    background-color: #970044;
-    color: #FFF;
-    padding: 4px 8px;
-    border-radius: 2px;
-    margin: 0 6px;
-     margin-left: 6px;
-}
-
-.pagination span:first-child {
-    margin-left: 0;
-}
-
-.pagination span:hover {
-    color: #FF0;
-    cursor: pointer;
+.header > h1::before {
+	content: url('../images/site-logo.png');
+	vertical-align: -30%;
 }
