--- a/css/misc.css
+++ b/css/misc.css
@@ -30,3 +30,27 @@
 .myclass::selection { ... }
 
 
+
+.more {
+  width: 100%;
+  background-color: #2ecc71;
+  border: none;
+  padding: 8px;
+  margin-bottom: 16px;
+  font-size: 16px;
+  border-radius: 2px;
+  color: #ecf0f1;
+}
+
+.more-disabled {
+  width: 100%;
+  background-color: #bdc3c7;
+  border: none;
+  padding: 8px;
+  margin-bottom: 16px;
+  font-size: 16px;
+  border-radius: 2px;
+  color: #ecf0f1;
+}
+
+
