--- a/css/misc.css
+++ b/css/misc.css
@@ -40,6 +40,8 @@
   font-size: 16px;
   border-radius: 2px;
   color: #ecf0f1;
+  cursor: pointer;
+  border-bottom: 3px solid #27ae60;
 }
 
 .more-disabled {
